# ansible-inventory-to-ssh-config

./: .gitignore  LICENSE  Makefile  README.md  aitsc.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  publish-to-pypi.yml  pylint.yml
src/: main.py
src/aitsc/: main.py
